--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -24,3 +24,19 @@ jobs:
         run: |
           cd tests
           go test -v || exit 1
+
+  build-and-push-docker-image:
+    needs: build-and-test
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Source
+        uses: actions/checkout@v4
+
+      - name: Login to Docker Hub
+        run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Build Docker Image
+        run: docker build -t osmar94/go-pack-master .
+
+      - name: Push Image to Docker Hub
+        run: docker push osmar94/go-pack-master:latest
