--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -18,7 +18,7 @@ jobs:
           go-version: '1.22.5'
 
       - name: Install Dependencies
-        run: go mod download
+        run: go mod tidy
 
       - name: Run Tests
         run: |
