--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -4,7 +4,9 @@ on:
   push:
     branches:
       - feature/workflow-api-ops
-
+  pull_request:
+    branches:
+      - main
 jobs:
   build-and-test:
     runs-on: ubuntu-latest
