updated cicd and docker

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -7,6 +7,7 @@ on:
   pull_request:
     branches:
       - main
+
 jobs:
   build-and-test:
     runs-on: ubuntu-latest
@@ -38,7 +39,11 @@ jobs:
         run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Build Docker Image
-        run: docker build -t osmar94/go-pack-master .
+        run: |
+          docker build \
+            --build-arg TREBLLE_API_KEY=${{ secrets.TREBLLE_API_KEY }} \
+            --build-arg TREBLLE_PROJECT_ID=${{ secrets.TREBLLE_PROJECT_ID }} \
+            -t osmar94/go-pack-master .
 
       - name: Push Image to Docker Hub
         run: docker push osmar94/go-pack-master:latest
